Update workspace, integrate ModMenu, ClothConfig